--- a/favoritos.html
+++ b/favoritos.html
@@ -8,7 +8,23 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger bg-gradient p-3">
+
+       <style>
+        .navbar-nav .nav-link {
+            color: #800080 !important; 
+        }
+        
+        .navbar-nav .nav-link.active {
+            color: #800080 !important;
+            font-weight: bold; 
+        }
+        
+        .navbar-nav .nav-link:hover {
+            color: #b300b3 !important; 
+            text-decoration: underline; 
+        }
+    </style>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient p-3">
         <div class="container-fluid">
             <a class="navbar-brand fs-4" href="index.html">Buscador de Recetas</a>
 
