--- a/favoritos.html
+++ b/favoritos.html
@@ -26,7 +26,7 @@
     </style>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient p-3">
         <div class="container-fluid">
-            <a class="navbar-brand fs-4" href="index.html">Buscador de Recetas</a>
+            <a class="navbar-brand fs-4" href="index.html">Rosendo Rubio Solís</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
